--- a/Client/index.html
+++ b/Client/index.html
@@ -12,11 +12,14 @@
 
     <form>
         <input type="file" id="file-upload" required>
-        <input type="submit" id="submit-button">
+        <input type="submit" id="submit-button" onclick="uploadFile()">
     </form>
 
     <h2>Library</h2>
+    <div id="image-library">
+
+    </div>
     
-    <script src="js/script.js"></script>
+    <script src="./js/scripts.js"></script>
 </body>
 </html>
