add list of images in bucket

--- a/Client/index.html
+++ b/Client/index.html
@@ -18,8 +18,9 @@
     <h2>Library</h2>
     <div id="image-library">
 
+        
     </div>
-    
+    <button onclick="loadFiles()">Reload list</button>
     <script src="./js/scripts.js"></script>
 </body>
 </html>
