--- a/Client/index.html
+++ b/Client/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ImageStorage</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <h1>Image Storage</h1>
 
     <h4>Upload an image</h4>
 
-    <form>
-        <input type="file" id="file-upload" required>
+    <form enctype="multipart/form-data" method="post">
+        <input type="file" id="file-upload" name="uploaded_file" required>
         <input type="submit" id="submit-button" onclick="uploadFile()">
     </form>
 
