--- a/Client/index.html
+++ b/Client/index.html
@@ -13,7 +13,7 @@
 
     <form enctype="multipart/form-data" method="post">
         <input type="file" id="file-upload" name="uploaded_file" required>
-        <input type="submit" id="submit-button" onclick="uploadFile()">
+        <input type="button" id="submit-button" value="Submit" onclick="uploadFile()">
     </form>
 
     <h2>Library</h2>
